--- a/front/index.html
+++ b/front/index.html
@@ -12,6 +12,7 @@
 <script src="js/app/app.js"></script>
 <script src="js/app/rest-service.js"></script>
 <script src="js/app/registerlogcontroller.js"></script>
+<script src="js/app/context-search-controller.js"></script>
 </head>
 <body>
 
@@ -24,16 +25,14 @@
 
 		<div class="row">
 			<!-- Sidebar -->
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<ul class="nav nav-pills nav-stacked">
-	 			 <li class="active"><a href="#">Home</a></li>
-	  			<li><a href="#">Menu 1</a></li>
-	  			<li><a href="#">Menu 2</a></li>
-	  			<li><a href="#">Menu 3</a></li>
+	 			<li><a ui-sref="register-log">Registrar log</a></li>
+	  			<li><a ui-sref="context-search">Procurar por contexto</a></li>
 				</ul>
 			</div>
 
-			<div class="col-sm-8">
+			<div class="col-sm-9">
 				<ui-view></ui-view>
 			</div>
 		</div>
